--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1036,7 +1036,7 @@ Loading variables...
 &lt;&lt;if $avatar_status == &quot;Online&quot; and $hachi_status==&quot;Online&quot;&gt;&gt;
 &lt;div id=&quot;bottomContainer&quot;&gt;
 	&lt;div id=&quot;avatar_story&quot;&gt;
-          &lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;
+          &lt;&lt;include &quot;avatar_bakery_1&quot;&gt;&gt;
 	&lt;/div&gt;
       &lt;div id=&quot;hachi_story&quot;&gt;
              &lt;&lt;include &quot;empty&quot;&gt;&gt;	
@@ -2633,7 +2633,7 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
 &lt;&lt;elseif _prevavatarMovement !== $avatar_movement&gt;&gt;
   &lt;&lt;script&gt;&gt;
       makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;); 
-      console.log(variables().avatar_comment); 
+      //console.log(variables().avatar_comment); 
   &lt;&lt;/script&gt;&gt;
 &lt;&lt;set _prevavatarMovement to variables().avatar_movement&gt;&gt;
 &lt;&lt;if $avatar_comment !== _prevavatarComment&gt;&gt;
