--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1036,7 +1036,7 @@ Loading variables...
 &lt;&lt;if $avatar_status == &quot;Online&quot; and $hachi_status==&quot;Online&quot;&gt;&gt;
 &lt;div id=&quot;bottomContainer&quot;&gt;
 	&lt;div id=&quot;avatar_story&quot;&gt;
-          &lt;&lt;include &quot;avatar_bakery_1&quot;&gt;&gt;
+          &lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;
 	&lt;/div&gt;
       &lt;div id=&quot;hachi_story&quot;&gt;
              &lt;&lt;include &quot;empty&quot;&gt;&gt;	
