--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -340,7 +340,7 @@ window.writeToAvatar = function(databaseNode, avatarData) {
     const avatarRef = firebase.database().ref(avatarDatabase + databaseNode);
     return avatarRef.set(avatarData)
         .then(() => {
-            //console.log("Successfully updated " + avatarData + " in " + avatarDatabase + " node " + databaseNode);
+            console.log("Successfully updated " + avatarData + " in " + avatarDatabase + " node " + databaseNode);
         })
         .catch(error => {
             console.error("Error updating data:", error);
@@ -352,7 +352,7 @@ window.writeToHachi = function(databaseNode, hachiData) {
     const hachiRef = firebase.database().ref(hachiDatabase + databaseNode);
     return hachiRef.set(hachiData)
         .then(() => {
-            //console.log("Successfully updated " + hachiData + " in " + hachiDatabase + " node " + databaseNode);
+            console.log("Successfully updated " + hachiData + " in " + hachiDatabase + " node " + databaseNode);
         })
         .catch(error => {
             console.error("Error updating data:", error);
