--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1006,44 +1006,51 @@ Loading variables...
 </tw-passagedata><tw-passagedata pid="3" name="main" tags="" position="1150,675" size="200,100">&lt;&lt;nobr&gt;&gt;
 
 &lt;&lt;silently&gt;&gt;
-&lt;&lt;repeat 150ms&gt;&gt;
-    &lt;&lt;replace &quot;#refreshArea&quot;&gt;&gt;
-        &lt;&lt;include &quot;live_variables&quot;&gt;&gt;
-        &lt;&lt;update&gt;&gt;
-    &lt;&lt;/replace&gt;&gt;
-&lt;&lt;/repeat&gt;&gt;
+  &lt;&lt;repeat 150ms&gt;&gt;
+      &lt;&lt;replace &quot;#refreshArea&quot;&gt;&gt;
+          &lt;&lt;include &quot;live_variables&quot;&gt;&gt;
+          &lt;&lt;update&gt;&gt;
+      &lt;&lt;/replace&gt;&gt;
+  &lt;&lt;/repeat&gt;&gt;
 &lt;&lt;/silently&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
-&lt;&lt;if $avatar_status == &quot;Online&quot; and $hachi_status==&quot;Online&quot;&gt;&gt;
-&lt;&lt;set _buttonCaption to &quot;GO&quot;&gt;&gt;
-&lt;&lt;else&gt;&gt;
-&lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
-&lt;&lt;/if&gt;&gt;
+  &lt;&lt;if $avatar_status == &quot;Online&quot; and $hachi_status==&quot;Online&quot;&gt;&gt;
+      &lt;&lt;set _buttonCaption to &quot;GO&quot;&gt;&gt;
+  &lt;&lt;else&gt;&gt;
+      &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
+  &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
 
 &lt;div id=&quot;topContainer&quot;&gt;
   &lt;div id=&quot;buttonArea&quot;&gt;
       &lt;img src=&quot;https://danielecheverri.github.io/logo.svg&quot; alt=&quot;Searching for us&quot; class=&quot;svg-logo&quot;&gt;
-          &lt;&lt;button &#39;&lt;&lt;live _buttonCaption&gt;&gt;&#39; &gt;&gt;
+      &lt;&lt;button &#39;&lt;&lt;live _buttonCaption&gt;&gt;&#39; &gt;&gt;
+          &lt;&lt;if _buttonCaption == &quot;GO&quot;&gt;&gt;
+              &lt;&lt;run Engine.restart()&gt;&gt;
+              &lt;&lt;set $startStory to true&gt;&gt;
+              &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
+          &lt;&lt;else&gt;&gt;
               &lt;&lt;run Engine.restart()&gt;&gt;
               &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
-          &lt;&lt;/button&gt;&gt;
-      &lt;/div&gt;
-      &lt;div id=&quot;refreshArea&quot;&gt;	
-      &lt;/div&gt;
+          &lt;&lt;/if&gt;&gt;
+      &lt;&lt;/button&gt;&gt;
+  &lt;/div&gt;
+  &lt;div id=&quot;refreshArea&quot;&gt;	
+  &lt;/div&gt;
 &lt;/div&gt;
 
-&lt;&lt;if $avatar_status == &quot;Online&quot; and $hachi_status==&quot;Online&quot;&gt;&gt;
-&lt;div id=&quot;bottomContainer&quot;&gt;
-	&lt;div id=&quot;avatar_story&quot;&gt;
-          &lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;
-	&lt;/div&gt;
+&lt;&lt;if $startStory == true&gt;&gt;
+	&lt;div id=&quot;bottomContainer&quot;&gt;
+      &lt;div id=&quot;avatar_story&quot;&gt;
+            &lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;
+      &lt;/div&gt;
       &lt;div id=&quot;hachi_story&quot;&gt;
              &lt;&lt;include &quot;empty&quot;&gt;&gt;	
       &lt;/div&gt;
 	&lt;/div&gt;
 &lt;&lt;/if&gt;&gt;
+
 &lt;&lt;set $avatar_passage to &quot;&quot;&gt;&gt;
 &lt;&lt;set $hachi_passage to &quot;&quot;&gt;&gt;
 &lt;&lt;set $storyWeather to &#39;&#39;&gt;&gt;
