--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1032,6 +1032,7 @@ Loading variables...
           &lt;&lt;if _buttonCaption == &quot;GO&quot;&gt;&gt;
               &lt;&lt;set $startStory to true&gt;&gt;
               &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
+              &lt;&lt;run Engine.restart()&gt;&gt;
           &lt;&lt;else&gt;&gt;
               &lt;&lt;run Engine.restart()&gt;&gt;
               &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
