--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1043,7 +1043,7 @@ Loading variables...
   &lt;/div&gt;
 &lt;/div&gt;
 
-&lt;&lt;if $startStory == true&gt;&gt;
+&lt;&lt;if $startStory is true&gt;&gt;
 	&lt;div id=&quot;bottomContainer&quot;&gt;
       &lt;div id=&quot;avatar_story&quot;&gt;
             &lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;
