--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1027,24 +1027,18 @@ Loading variables...
 
 &lt;div id=&quot;topContainer&quot;&gt;
   &lt;div id=&quot;buttonArea&quot;&gt;
-      &lt;img src=&quot;https://danielecheverri.github.io/logo.svg&quot; alt=&quot;Searching for us&quot; class=&quot;svg-logo&quot;&gt;
-      &lt;&lt;button &#39;&lt;&lt;live _buttonCaption&gt;&gt;&#39; &gt;&gt;
-          &lt;&lt;if _buttonCaption == &quot;GO&quot;&gt;&gt;
-              &lt;&lt;set $startStory to true&gt;&gt;
-              &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
-              &lt;&lt;run Engine.restart()&gt;&gt;
-          &lt;&lt;else&gt;&gt;
-              &lt;&lt;run Engine.restart()&gt;&gt;
-              &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
-          &lt;&lt;/if&gt;&gt;
-      &lt;&lt;/button&gt;&gt;
+    &lt;img src=&quot;https://danielecheverri.github.io/logo.svg&quot; alt=&quot;Searching for us&quot; class=&quot;svg-logo&quot;&gt;
+    &lt;&lt;button &#39;&lt;&lt;live _buttonCaption&gt;&gt;&#39; &gt;&gt;
+    &lt;&lt;run Engine.restart()&gt;&gt;
+    &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
+    &lt;&lt;/button&gt;&gt;
   &lt;/div&gt;
-  &lt;div id=&quot;refreshArea&quot;&gt;	
+ 	 &lt;div id=&quot;refreshArea&quot;&gt;
   &lt;/div&gt;
 &lt;/div&gt;
 
-&lt;&lt;if $startStory is true&gt;&gt;
-	&lt;div id=&quot;bottomContainer&quot;&gt;
+&lt;&lt;if $avatar_status == &quot;Online&quot; and $hachi_status == &quot;Online&quot;&gt;&gt;
+&lt;div id=&quot;bottomContainer&quot;&gt;
       &lt;div id=&quot;avatar_story&quot;&gt;
             &lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;
       &lt;/div&gt;
