--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1031,7 +1031,7 @@ Loading variables...
       &lt;&lt;button &#39;&lt;&lt;live _buttonCaption&gt;&gt;&#39; &gt;&gt;
           &lt;&lt;if _buttonCaption == &quot;GO&quot;&gt;&gt;
               &lt;&lt;run Engine.restart()&gt;&gt;
-              &lt;&lt;set $startStory to true&gt;&gt;
+              &lt;&lt;set $storyReady to true&gt;&gt;
               &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
           &lt;&lt;else&gt;&gt;
               &lt;&lt;run Engine.restart()&gt;&gt;
