--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1029,7 +1029,7 @@ Loading variables...
       &lt;img src=&quot;https://danielecheverri.github.io/logo.svg&quot; alt=&quot;Searching for us&quot; class=&quot;svg-logo&quot;&gt;
       &lt;&lt;button &#39;&lt;&lt;live _buttonCaption&gt;&gt;&#39; &gt;&gt;
           &lt;&lt;if _buttonCaption == &quot;GO&quot;&gt;&gt;
-              &lt;&lt;set $storyReady to true&gt;&gt;
+          	  &lt;&lt;set $storyReady to true&gt;&gt;
               &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
           &lt;&lt;else&gt;&gt;
               &lt;&lt;run Engine.restart()&gt;&gt;
@@ -1041,16 +1041,19 @@ Loading variables...
   &lt;/div&gt;
 &lt;/div&gt;
 
+&lt;&lt;repeat 200ms&gt;&gt;
 &lt;&lt;if $storyReady is true&gt;&gt;
-&lt;div id=&quot;bottomContainer&quot;&gt;
-      &lt;div id=&quot;avatar_story&quot;&gt;
-            &lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;
-      &lt;/div&gt;
-      &lt;div id=&quot;hachi_story&quot;&gt;
-             &lt;&lt;include &quot;empty&quot;&gt;&gt;	
-      &lt;/div&gt;
+	&lt;div id=&quot;bottomContainer&quot;&gt;
+        &lt;div id=&quot;avatar_story&quot;&gt;
+              &lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;
+        &lt;/div&gt;
+        &lt;div id=&quot;hachi_story&quot;&gt;
+               &lt;&lt;include &quot;empty&quot;&gt;&gt;	
+        &lt;/div&gt;
 	&lt;/div&gt;
+    &lt;&lt;stop&gt;&gt;
 &lt;&lt;/if&gt;&gt;
+&lt;&lt;/repeat&gt;&gt;
 
 &lt;&lt;set $storyWeather to &#39;&#39;&gt;&gt;
 &lt;&lt;set $storyTime to &#39;&#39;&gt;&gt;
