--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1022,6 +1022,9 @@ Loading variables...
   &lt;&lt;else&gt;&gt;
       &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
+  &lt;&lt;if $storyReady == true&gt;&gt;
+  	  &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
+  &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
 
 &lt;div id=&quot;topContainer&quot;&gt;
