--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1048,10 +1048,10 @@ Loading variables...
 &lt;&lt;if $storyReady is true&gt;&gt;
 	&lt;div id=&quot;bottomContainer&quot;&gt;
         &lt;div id=&quot;avatar_story&quot;&gt;
-              &lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;
+              &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
         &lt;/div&gt;
         &lt;div id=&quot;hachi_story&quot;&gt;
-               &lt;&lt;include &quot;empty&quot;&gt;&gt;	
+               &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;	
         &lt;/div&gt;
 	&lt;/div&gt;
     &lt;&lt;stop&gt;&gt;
