--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1046,6 +1046,7 @@ Loading variables...
 
 &lt;&lt;repeat 200ms&gt;&gt;
 &lt;&lt;if $storyReady is true&gt;&gt;
+	&lt;&lt;stop&gt;&gt;
 	&lt;div id=&quot;bottomContainer&quot;&gt;
         &lt;div id=&quot;avatar_story&quot;&gt;
               &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
@@ -1054,7 +1055,6 @@ Loading variables...
                &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;	
         &lt;/div&gt;
 	&lt;/div&gt;
-    &lt;&lt;stop&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
 
@@ -2225,7 +2225,7 @@ $avatar_passage
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="56" name="both_preamble" tags="" position="1850,375" size="200,100">&lt;&lt;nobr&gt;&gt;
 
-&lt;&lt;set $avatar_passage to &quot;both_00/A tale of friendship and loyalty unfolds in the heart of &quot; + $storyCity +&quot; ,small city decorated with cobblestone streets and old buildings. Hachi, the loyal Akita dog, and Buro, a shy university student, share a bond through many years of friendship./street&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;both_00/A tale of friendship and loyalty unfolds in the heart of &quot; + $storyCity +&quot;, a small city decorated with cobblestone streets and old buildings. Hachi, the loyal Akita dog, and Buro, a shy university student, share a bond through many years of friendship./street&quot;&gt;&gt;
 
 &lt;&lt;set $hachi_passage to &quot;both_00/A tale of friendship and loyalty unfolds in the heart of &quot; + $storyCity +&quot; ,small city decorated with cobblestone streets and old buildings. Hachi, the loyal Akita dog, and Buro, a shy university student, share a bond through many years of friendship./street&quot;&gt;&gt;
 
